Bug 1161433: reject empty gUM contraints with NotSupportedError. r=jib